Fix sonar issues relate do the recommandation-service